# Chess

./: .gitignore  CMakeLists.txt
assets/models/Bishop/: Bishop.mtl
assets/models/Chess_Board/: Chess_Board.mtl
assets/models/King/: white_king.mtl
assets/models/Queen/: Queen.mtl
lib/: tiny_obj_loader.h
lib/glmax/src/: Camera.cpp  Shader.cpp  Texture.cpp  Texture.hpp
lib/quick_imgui/: CMakeLists.txt
lib/quick_imgui/include/quick_imgui/: quick_imgui.hpp
shaders/: color2D.vs.glsl  grey2D.fs.glsl  model.fs.glsl  model.vs.glsl  skybox.vs.glsl
src/: App.cpp  Board.cpp  Info.cpp  Model3D.cpp  Renderer3D.cpp  Skybox.cpp  main.cpp  utils.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/SyntImg/: Loader.cpp  VAO.hpp  VBO.hpp
src/buffers/: EBO.cpp  VAO.cpp  VBO.cpp
src/glimac/: Cone.cpp  Geometry.cpp  Image.cpp  Program.cpp  Shader.cpp  Sphere.cpp
src/headers/: App.hpp  Board.hpp  Info.hpp  Model3D.hpp  Proba.hpp  Renderer3D.hpp  Skybox.hpp  history.hpp  utils.hpp
src/headers/Pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
src/headers/SyntImg/: Loader.hpp  VAO.hpp  VBO.hpp
